<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#424242"
        android:orientation="vertical"
        android:padding="9dp">

        <ImageView
            android:id="@+id/img_tv_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image_recycler"
            android:scaleType="centerCrop"
            android:src="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_title_tvShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="1"
            android:text="@string/title_tvshow"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_tvshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            tools:text="@string/date" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>